--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
 <body>
 <form class="vflex" id="playbackControls">
   <div class="hflex">
-    <input type="file" id="fileSelect">
-    <button type="button" onclick="loadFile()">Load</button>
-    <button type="button" onclick="saveFile()">Save</button>
+    <label class="label-button">
+      <input type="file" id="fileSelect" autocomplete="off">
+      <span><img class="icon" src="assets/folder-open.svg"></span>
+    </label>
+    <button type="button" id="fileDownload">
+      <img class="icon" src="assets/web.svg">
+    </button>
+    <button type="button" id="fileSave">
+      <img class="icon" src="assets/download.svg">
+    </button>
+    <button type="button" onclick="patternZap()">
+      <img class="icon" src="assets/playlist-remove.svg">
+    </button>
+    <output id="title"></output>
   </div>
   <div class="hflex">
     <button id="playStart" type="button">
@@ -35,13 +46,6 @@
     <label class="label-button">
       <input type="checkbox" id="patternLoop">
       <span><img class="icon" src="assets/repeat-variant.svg"></span>
-    </label>
-    <button type="button" onclick="patternZap()">Pattern Zap</button>
-  </div>
-  <div class="hflex">
-    <label>
-      Title:
-      <output id="title"></output>
     </label>
   </div>
   <div class="hflex">
