--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
     <button id="clear">
       <img class="icon" src="assets/eraser.svg">
     </button>
+    <button onclick="undo()">
+      <img class="icon" src="assets/undo.svg">
+    </button>
   </div>
   <form id="pitchEntry" class="hflex">
     <label class="label-button">
