Sample list is scrollable

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <input type="checkbox" checked id="sampleEnable" onchange="updateEntryParts()">
       <span>Sample</span>
     </label>
-    <span id="sampleList" class="hflex" style="flex-wrap:wrap"></span>
+    <span id="sampleList" class="hflex hscrollable"></span>
   </form>
   <form id="effectEntry" class="hflex">
     <label class="label-button">
