Use radio buttons for sequence

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </label>
   </div>
   <div class="hflex">
-    <select class="hselect" id="sequence" size="2" oninput="refreshPattern()"></select>
+    <span id="sequenceList" class="hflex hscrollable"></span>
   </div>
   <div class="hflex">
     <label>
