Fix effect input event

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <input type="checkbox" id="effectEnable" onchange="updateEntryParts()">
       <span>Effect</span>
     </label>
-    <select id="effect" onchange="effectEntry.param0.selectedIndex = effectEntry.param1.selectedIndex = 0">
+    <select id="effect">
       <option>0: Arpeggio</option>
       <option>1: Port Up</option>
       <option>2: Port Down</option>
