Change sample volume

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
       <input type="checkbox" checked id="sampleEnable" onchange="updateEntryParts()">
       <span>Sample</span>
     </label>
-    <span id="sampleList" class="hflex hscrollable"></span>
+    <span id="sampleList" class="hflex flex-grow hscrollable"></span>
+    <button id="setSampleVolume" type="button">V</button>
   </form>
   <form id="effectEntry" class="hflex">
     <label class="label-button">
