--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
+<link href="src/WebApp.css" rel="stylesheet">
 <link href="index.css" rel="stylesheet">
 
 <script src="src/Module.js"></script>
