--- a/_main.html
+++ b/_main.html
@@ -15,7 +15,6 @@
     <script src="src/edit/Util.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
     <script src="src/file/ModWriter.js" defer></script>
-    <script src="src/ui/AppMain.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
     <!-- DOMUtil.js is loaded later -->
@@ -25,6 +24,8 @@
     <script src="src/ui/SequenceEdit.js" defer></script>
     <script src="src/ui/UtilTemplates.js" defer></script>
     <script src="src/ui/WebApp.js" defer></script>
+    <!-- AppMain is loaded last! -->
+    <script src="src/ui/AppMain.js" defer></script>
   </head>
   <body>
 
