Start with an empty module

--- a/_main.html
+++ b/_main.html
@@ -10,6 +10,7 @@
     <script src="src/Module.js" defer></script>
     <script src="src/PeriodTable.js" defer></script>
     <script src="src/Playback.js" defer></script>
+    <script src="src/edit/Module.js" defer></script>
     <script src="src/edit/Pattern.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
     <script src="src/edit/Util.js" defer></script>
