--- a/_main.html
+++ b/_main.html
@@ -12,6 +12,7 @@
     <script src="src/Playback.js" defer></script>
     <script src="src/edit/Module.js" defer></script>
     <script src="src/edit/Pattern.js" defer></script>
+    <script src="src/edit/Sample.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
     <script src="src/edit/Util.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
@@ -25,7 +26,7 @@
     <script src="src/ui/SequenceEdit.js" defer></script>
     <script src="src/ui/UtilTemplates.js" defer></script>
     <script src="src/ui/WebApp.js" defer></script>
-    <!-- AppMain is loaded last! -->
+    <!-- AppMain.js is loaded last! -->
     <script src="src/ui/AppMain.js" defer></script>
   </head>
   <body>
