--- a/_main.html
+++ b/_main.html
@@ -23,6 +23,7 @@
     <script src="src/ui/FileToolbar.js" defer></script>
     <script src="src/ui/PatternTable.js" defer></script>
     <script src="src/ui/PlaybackControls.js" defer></script>
+    <script src="src/ui/SamplesList.js" defer></script>
     <script src="src/ui/SequenceEdit.js" defer></script>
     <script src="src/ui/UtilTemplates.js" defer></script>
     <script src="src/ui/WebApp.js" defer></script>
