Module Properties panel

--- a/_main.html
+++ b/_main.html
@@ -21,6 +21,7 @@
     <script src="src/ui/CellEntry.js" defer></script>
     <!-- DOMUtil.js is loaded later -->
     <script src="src/ui/FileToolbar.js" defer></script>
+    <script src="src/ui/ModuleProperties.js" defer></script>
     <script src="src/ui/PatternTable.js" defer></script>
     <script src="src/ui/PlaybackControls.js" defer></script>
     <script src="src/ui/SampleEdit.js" defer></script>
