--- a/_main.html
+++ b/_main.html
@@ -15,6 +15,7 @@
     <script src="src/edit/Sample.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
     <script src="src/edit/Util.js" defer></script>
+    <script src="src/file/Audio.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
     <script src="src/file/ModWriter.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
