Text decode/encode utilities

--- a/_main.html
+++ b/_main.html
@@ -18,6 +18,7 @@
     <script src="src/file/Audio.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
     <script src="src/file/ModWriter.js" defer></script>
+    <script src="src/file/Util.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
     <!-- DOMUtil.js is loaded later -->
