Reuse immutable constants

--- a/_main.html
+++ b/_main.html
@@ -10,18 +10,17 @@
     <script src="src/Module.js" defer></script>
     <script src="src/PeriodTable.js" defer></script>
     <script src="src/Playback.js" defer></script>
-    <script src="src/edit/Module.js" defer></script>
     <script src="src/edit/Pattern.js" defer></script>
     <script src="src/edit/Sample.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
     <script src="src/edit/Util.js" defer></script>
+    <script src="src/edit/Module.js" defer></script>
     <script src="src/file/Audio.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
     <script src="src/file/ModWriter.js" defer></script>
     <script src="src/file/Util.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
-    <!-- DOMUtil.js is loaded later -->
     <script src="src/ui/FileToolbar.js" defer></script>
     <script src="src/ui/ModuleProperties.js" defer></script>
     <script src="src/ui/PatternTable.js" defer></script>
@@ -31,7 +30,7 @@
     <script src="src/ui/SequenceEdit.js" defer></script>
     <script src="src/ui/UtilTemplates.js" defer></script>
     <script src="src/ui/WebApp.js" defer></script>
-    <!-- AppMain.js is loaded last! -->
+    <!-- must be loaded last! -->
     <script src="src/ui/AppMain.js" defer></script>
   </head>
   <body>
