--- a/_main.html
+++ b/_main.html
@@ -14,11 +14,12 @@
     <script src="src/edit/Sample.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
     <script src="src/edit/Util.js" defer></script>
-    <script src="src/edit/Module.js" defer></script>
+    <script src="src/edit/Module.js" defer></script> <!-- depends on above -->
     <script src="src/file/Audio.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
     <script src="src/file/ModWriter.js" defer></script>
     <script src="src/file/Util.js" defer></script>
+    <script src="src/file/WavLoader.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
     <script src="src/ui/FileToolbar.js" defer></script>
