Move sample edit operations

--- a/_main.html
+++ b/_main.html
@@ -23,6 +23,7 @@
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
     <script src="src/ui/FileToolbar.js" defer></script>
+    <script src="src/ui/GlobalState.js" defer></script>
     <script src="src/ui/KeyPad.js" defer></script>
     <script src="src/ui/ModuleProperties.js" defer></script>
     <script src="src/ui/PatternTable.js" defer></script>
