Move tempo/speed to Sequence tab

--- a/_main.html
+++ b/_main.html
@@ -29,6 +29,7 @@
     <script src="src/ui/ModuleProperties.js" defer></script>
     <script src="src/ui/PatternTable.js" defer></script>
     <script src="src/ui/PlaybackControls.js" defer></script>
+    <script src="src/ui/PlaybackStatus.js" defer></script>
     <script src="src/ui/SampleEdit.js" defer></script>
     <script src="src/ui/SamplesList.js" defer></script>
     <script src="src/ui/SequenceEdit.js" defer></script>
