--- a/_main.html
+++ b/_main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
     <link href="src/ui/WebApp.css" rel="stylesheet">
+    <link href="src/ui/Theme.css" rel="stylesheet">
     <link href="src/ui/Style.css" rel="stylesheet">
 
     <script src="src/Module.js" defer></script>
