Allow building app with version string

--- a/_main.html
+++ b/_main.html
@@ -51,7 +51,7 @@
 
     <script src="src/ui/DOMUtil.js"></script>
 
-    <app-main></app-main>
+    <app-main data-version="{{version}}"></app-main>
 
   </body>
 </html>
