Start support for dialogs

--- a/_main.html
+++ b/_main.html
@@ -26,6 +26,7 @@
     <script src="src/file/WavLoader.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
+    <script src="src/ui/Dialog.js" defer></script>
     <script src="src/ui/FileToolbar.js" defer></script>
     <script src="src/ui/GlobalState.js" defer></script>
     <script src="src/ui/InlineSVG.js" defer></script>
