--- a/_main.html
+++ b/_main.html
@@ -39,6 +39,7 @@
     <script src="src/ui/SamplesList.js" defer></script>
     <script src="src/ui/SequenceEdit.js" defer></script>
     <script src="src/ui/UtilTemplates.js" defer></script>
+    <script src="src/ui/WaitDialog.js" defer></script>
     <script src="src/ui/WebApp.js" defer></script>
     <!-- must be loaded last! -->
     <script src="src/ui/AppMain.js" defer></script>
