Amplify effect dialog

--- a/_main.html
+++ b/_main.html
@@ -41,6 +41,7 @@
     <script src="src/ui/UtilTemplates.js" defer></script>
     <script src="src/ui/WaitDialog.js" defer></script>
     <script src="src/ui/WebApp.js" defer></script>
+    <script src="src/ui/effects/AmplifyEffect.js" defer></script>
     <!-- must be loaded last! -->
     <script src="src/ui/AppMain.js" defer></script>
   </head>
