--- a/_main.html
+++ b/_main.html
@@ -44,7 +44,7 @@
     <script src="src/ui/dialogs/FilterEffect.js" defer></script>
     <script src="src/ui/dialogs/UtilDialogs.js" defer></script>
     <!-- must be loaded last! -->
-    <script src="src/ui/AppMain.js" defer></script>
+    <script src="src/ui/TrackerMain.js" defer></script>
   </head>
   <body>
 
@@ -55,7 +55,7 @@
 
     <script src="src/ui/DOMUtil.js"></script>
 
-    <app-main data-version="{{version}}"></app-main>
+    <tracker-main data-version="{{version}}"></tracker-main>
 
   </body>
 </html>
