Move piano to its own element

--- a/_main.html
+++ b/_main.html
@@ -33,6 +33,7 @@
     <script src="src/ui/KeyPad.js" defer></script>
     <script src="src/ui/ModuleProperties.js" defer></script>
     <script src="src/ui/PatternTable.js" defer></script>
+    <script src="src/ui/PianoKeyboard.js" defer></script>
     <script src="src/ui/PlaybackControls.js" defer></script>
     <script src="src/ui/PlaybackStatus.js" defer></script>
     <script src="src/ui/SampleEdit.js" defer></script>
