Split PatternTable and PatternEdit

--- a/_main.html
+++ b/_main.html
@@ -32,6 +32,7 @@
     <script src="src/ui/InlineSVG.js" defer></script>
     <script src="src/ui/KeyPad.js" defer></script>
     <script src="src/ui/ModuleProperties.js" defer></script>
+    <script src="src/ui/PatternEdit.js" defer></script>
     <script src="src/ui/PatternTable.js" defer></script>
     <script src="src/ui/PianoKeyboard.js" defer></script>
     <script src="src/ui/PlaybackControls.js" defer></script>
