--- a/_main.html
+++ b/_main.html
@@ -44,6 +44,7 @@
     <script src="src/ui/WebApp.js" defer></script>
     <script src="src/ui/dialogs/AmplifyEffect.js" defer></script>
     <script src="src/ui/dialogs/FilterEffect.js" defer></script>
+    <script src="src/ui/dialogs/ScriptDialog.js" defer></script>
     <script src="src/ui/dialogs/UtilDialogs.js" defer></script>
     <!-- must be loaded last! -->
     <script src="src/ui/TrackerMain.js" defer></script>
