Add console interface

--- a/_main.html
+++ b/_main.html
@@ -26,6 +26,7 @@
     <script src="src/file/WavLoader.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
+    <script src="src/ui/CLI.js" defer></script>
     <script src="src/ui/Dialog.js" defer></script>
     <script src="src/ui/FileToolbar.js" defer></script>
     <script src="src/ui/GlobalState.js" defer></script>
@@ -43,8 +44,8 @@
     <script src="src/ui/UtilTemplates.js" defer></script>
     <script src="src/ui/WebApp.js" defer></script>
     <script src="src/ui/dialogs/AmplifyEffect.js" defer></script>
+    <script src="src/ui/dialogs/CLIDialog.js" defer></script>
     <script src="src/ui/dialogs/FilterEffect.js" defer></script>
-    <script src="src/ui/dialogs/ScriptDialog.js" defer></script>
     <script src="src/ui/dialogs/UtilDialogs.js" defer></script>
     <!-- must be loaded last! -->
     <script src="src/ui/TrackerMain.js" defer></script>
