Move cellApply to edit

--- a/_main.html
+++ b/_main.html
@@ -10,19 +10,19 @@
     <link href="src/ui/Theme.css" rel="stylesheet">
     <link href="src/ui/Style.css" rel="stylesheet">
 
+    <script src="src/Util.js" defer></script>
     <script src="src/Module.js" defer></script>
     <script src="src/PeriodTable.js" defer></script>
     <script src="src/Playback.js" defer></script>
-    <script src="src/Util.js" defer></script>
+    <script src="src/edit/Util.js" defer></script>
     <script src="src/edit/Pattern.js" defer></script>
     <script src="src/edit/Sample.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
-    <script src="src/edit/Util.js" defer></script>
-    <script src="src/edit/Module.js" defer></script> <!-- depends on above -->
+    <script src="src/edit/Module.js" defer></script>
+    <script src="src/file/Util.js" defer></script>
     <script src="src/file/Audio.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
     <script src="src/file/ModWriter.js" defer></script>
-    <script src="src/file/Util.js" defer></script>
     <script src="src/file/WavLoader.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
