Use namespaces for edit functions

--- a/_main.html
+++ b/_main.html
@@ -14,11 +14,12 @@
     <script src="src/Module.js" defer></script>
     <script src="src/PeriodTable.js" defer></script>
     <script src="src/Playback.js" defer></script>
-    <script src="src/edit/Util.js" defer></script>
+    <script src="src/edit/index.js" defer></script>
     <script src="src/edit/Pattern.js" defer></script>
     <script src="src/edit/Sample.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
     <script src="src/edit/Module.js" defer></script>
+    <script src="src/edit/Wave.js" defer></script>
     <script src="src/file/Util.js" defer></script>
     <script src="src/file/Audio.js" defer></script>
     <script src="src/file/ModLoader.js" defer></script>
