Combine ModLoader and ModWriter

--- a/_main.html
+++ b/_main.html
@@ -22,9 +22,8 @@
     <script src="src/edit/Wave.js" defer></script>
     <script src="src/file/Util.js" defer></script>
     <script src="src/file/Audio.js" defer></script>
-    <script src="src/file/ModLoader.js" defer></script>
-    <script src="src/file/ModWriter.js" defer></script>
-    <script src="src/file/WavLoader.js" defer></script>
+    <script src="src/file/Mod.js" defer></script>
+    <script src="src/file/Wav.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
     <script src="src/ui/CLI.js" defer></script>
