Use namespaces for file functions

--- a/_main.html
+++ b/_main.html
@@ -10,17 +10,17 @@
     <link href="src/ui/Theme.css" rel="stylesheet">
     <link href="src/ui/Style.css" rel="stylesheet">
 
-    <script src="src/Util.js" defer></script>
     <script src="src/Module.js" defer></script>
     <script src="src/PeriodTable.js" defer></script>
     <script src="src/Playback.js" defer></script>
+    <script src="src/Util.js" defer></script>
     <script src="src/edit/index.js" defer></script>
     <script src="src/edit/Pattern.js" defer></script>
     <script src="src/edit/Sample.js" defer></script>
     <script src="src/edit/Sequence.js" defer></script>
     <script src="src/edit/Module.js" defer></script>
     <script src="src/edit/Wave.js" defer></script>
-    <script src="src/file/Util.js" defer></script>
+    <script src="src/file/index.js" defer></script>
     <script src="src/file/Audio.js" defer></script>
     <script src="src/file/Mod.js" defer></script>
     <script src="src/file/Wav.js" defer></script>
