--- a/_main.html
+++ b/_main.html
@@ -24,6 +24,7 @@
     <script src="src/file/Audio.js" defer></script>
     <script src="src/file/Mod.js" defer></script>
     <script src="src/file/Wav.js" defer></script>
+    <script src="src/ui/index.js" defer></script>
     <script src="src/ui/Cell.js" defer></script>
     <script src="src/ui/CellEntry.js" defer></script>
     <script src="src/ui/CLI.js" defer></script>
