Create stacking context for base layer

--- a/_main.html
+++ b/_main.html
@@ -59,7 +59,8 @@
 
     <script src="src/ui/DOMUtil.js"></script>
 
-    <tracker-main data-version="{{version}}"></tracker-main>
-
+    <div class="base">
+      <tracker-main data-version="{{version}}"></tracker-main>
+    </div>
   </body>
 </html>
