Download module with filename

--- a/_main.html
+++ b/_main.html
@@ -22,6 +22,7 @@
     <script src="src/edit/Wave.js" defer></script>
     <script src="src/file/index.js" defer></script>
     <script src="src/file/Audio.js" defer></script>
+    <script src="src/file/External.js" defer></script>
     <script src="src/file/Mod.js" defer></script>
     <script src="src/file/Wav.js" defer></script>
     <script src="src/ui/index.js" defer></script>
@@ -61,5 +62,6 @@
     <div class="base">
       <tracker-main data-version="{{version}}"></tracker-main>
     </div>
+    <a id="downloadLink" class="hide"></a>
   </body>
 </html>
