Use hidden attribute for download link

--- a/_main.html
+++ b/_main.html
@@ -62,6 +62,6 @@
     <div class="base">
       <tracker-main data-version="{{version}}"></tracker-main>
     </div>
-    <a id="downloadLink" class="hide"></a>
+    <a id="downloadLink" hidden></a>
   </body>
 </html>
