Add custom font

--- a/_main.html
+++ b/_main.html
@@ -9,6 +9,7 @@
     <link href="src/ui/WebApp.css" rel="stylesheet">
     <link href="src/ui/Theme.css" rel="stylesheet">
     <link href="src/ui/Style.css" rel="stylesheet">
+    <link href="assets/Font.css" rel="stylesheet">
 
     <script src="src/Module.js" defer></script>
     <script src="src/PeriodTable.js" defer></script>
