Convert UI code to ES6 Modules

--- a/_main.html
+++ b/_main.html
@@ -26,32 +26,9 @@
     <script src="src/file/External.js" defer></script>
     <script src="src/file/Mod.js" defer></script>
     <script src="src/file/Wav.js" defer></script>
-    <script src="src/ui/index.js" defer></script>
-    <script src="src/ui/Cell.js" defer></script>
-    <script src="src/ui/CellEntry.js" defer></script>
-    <script src="src/ui/CLI.js" defer></script>
-    <script src="src/ui/Dialog.js" defer></script>
-    <script src="src/ui/DOMUtil.js" defer></script>
-    <script src="src/ui/FileToolbar.js" defer></script>
-    <script src="src/ui/GlobalState.js" defer></script>
-    <script src="src/ui/InlineSVG.js" defer></script>
-    <script src="src/ui/KeyPad.js" defer></script>
-    <script src="src/ui/ModuleProperties.js" defer></script>
-    <script src="src/ui/PatternEdit.js" defer></script>
-    <script src="src/ui/PatternTable.js" defer></script>
-    <script src="src/ui/PianoKeyboard.js" defer></script>
-    <script src="src/ui/PlaybackControls.js" defer></script>
-    <script src="src/ui/SampleEdit.js" defer></script>
-    <script src="src/ui/SamplesList.js" defer></script>
-    <script src="src/ui/SequenceEdit.js" defer></script>
-    <script src="src/ui/UtilTemplates.js" defer></script>
-    <script src="src/ui/WebApp.js" defer></script>
-    <script src="src/ui/dialogs/AmplifyEffect.js" defer></script>
-    <script src="src/ui/dialogs/CLIDialog.js" defer></script>
-    <script src="src/ui/dialogs/FilterEffect.js" defer></script>
-    <script src="src/ui/dialogs/UtilDialogs.js" defer></script>
+    <script src="src/ui/WebApp.js" type="module"></script>
     <!-- must be loaded last! -->
-    <script src="src/ui/TrackerMain.js" defer></script>
+    <script src="src/ui/TrackerMain.js" type="module"></script>
 
     <!-- TEMPLATES -->
 
