Add Replete webl client to build script

--- a/_main.html
+++ b/_main.html
@@ -11,7 +11,7 @@
     <link href="src/ui/Style.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
 
-    <script src="src/Main.js" type="module"></script>
+    <script src="{{main}}" type="module"></script>
 
     <!-- TEMPLATES -->
 
