Move version string to generated JavaScript

--- a/_main.html
+++ b/_main.html
@@ -13,7 +13,7 @@
 
     <script src="{{main}}" type="module"></script>
   </head>
-  <body data-version="{{version}}">
+  <body>
     <div class="base"></div>
     <a id="downloadLink" hidden></a>
   </body>
