index.html is no longer generated

--- a/webl.html
+++ b/webl.html
@@ -11,7 +11,8 @@
     <link href="src/ui/Style.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
 
-    <script src="{{main}}" type="module"></script>
+    <!-- https://github.com/jamesdiacono/Replete -->
+    <script src="/webl_client.js" type="module"></script>
   </head>
   <body>
     <div class="base"></div>
