--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
 
+    <title>ChromaTracker</title>
+
     <link href="manifest.json" rel="manifest" />
 
     <link href="src/ui/WebApp.css" rel="stylesheet">
