Detect old browsers

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <link href="src/ui/Style.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
 
+    <script src="src/Mustard.js"></script>
     <script src="src/Main.js" type="module"></script>
   </head>
   <body>
+    <noscript>
+      JavaScript must be enabled to use ChromaTracker
+    </noscript>
     <div class="base"></div>
   </body>
 </html>
