Change debugging to use alerts

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="assets/Font.css" rel="stylesheet">
 
     <script src="src/Mustard.js"></script>
+    <script src="src/Debug.js" type="module"></script>
     <script src="src/Main.js" type="module"></script>
   </head>
   <body>
