--- a/webl.html
+++ b/webl.html
@@ -9,6 +9,7 @@
     <link href="src/ui/Theme.css" rel="stylesheet">
     <link href="src/ui/Style.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
+    <link href="src/ui/Util.css" rel="stylesheet">
 
     <!-- https://github.com/jamesdiacono/Replete -->
     <script src="/webl_client.js" type="module"></script>
