--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="src/ui/Style.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
     <link href="src/ui/Util.css" rel="stylesheet">
+    <link href="src/ui/CustomElements.css" rel="stylesheet">
 
     <script src="src/Mustard.js"></script>
     <script src="src/Debug.js" type="module"></script>
