--- a/webl.html
+++ b/webl.html
@@ -10,7 +10,7 @@
     <link href="src/ui/Style.css" rel="stylesheet">
     <link href="src/ui/Util.css" rel="stylesheet">
     <link href="src/ui/CustomElements.css" rel="stylesheet">
-    <link href="assets/Font.css" rel="stylesheet">
+    <link href="assets/Font.css" rel="stylesheet" data-noreload="true">
 
     <!-- https://github.com/jamesdiacono/Replete -->
     <script src="/webl_client.js" type="module"></script>
