Add favicon link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="src/ui/CustomElements.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
 
+    <link rel="shortcut icon" href="https://chroma.zone/favicon.ico">
+
     <script src="src/Mustard.js"></script>
     <script src="src/Debug.js" type="module"></script>
     <script src="src/Main.js" type="module"></script>
