--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
     <title>ChromaTracker</title>
 
     <link href="manifest.json" rel="manifest" />
-
-    <link href="src/ui/WebApp.css" rel="stylesheet">
-    <link href="src/ui/Theme.css" rel="stylesheet">
-    <link href="src/ui/Style.css" rel="stylesheet">
-    <link href="src/ui/Util.css" rel="stylesheet">
-    <link href="src/ui/CustomElements.css" rel="stylesheet">
+    <link href="src/Main.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
-
     <link rel="shortcut icon" href="https://chroma.zone/favicon.ico">
 
     <script src="src/Mustard.js"></script>
