Separate debug and release pages

--- a/debug.html
+++ b/debug.html
@@ -9,13 +9,13 @@
     <title>ChromaTracker</title>
 
     <link href="manifest.json" rel="manifest" />
-    <link href="build/bundle.css" rel="stylesheet">
+    <link href="src/Main.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://chroma.zone/favicon.ico">
 
     <script src="src/Mustard.js"></script>
     <script src="src/Debug.js" type="module"></script>
-    <script src="build/bundle.js" type="module"></script>
+    <script src="src/Main.js" type="module"></script>
   </head>
   <body>
     <noscript>
