New reloadCSS implementation which handles @ import

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>ChromaTracker</title>
 
-    <link href="manifest.json" rel="manifest" />
+    <link href="manifest.json" rel="manifest">
     <link href="build/bundle.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://chroma.zone/favicon.ico">
