--- a/webl.html
+++ b/webl.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover">
     <meta name="color-scheme" content="dark">
 
-    <link href="src/ui/WebApp.css" rel="stylesheet">
-    <link href="src/ui/Theme.css" rel="stylesheet">
-    <link href="src/ui/Style.css" rel="stylesheet">
-    <link href="src/ui/Util.css" rel="stylesheet">
-    <link href="src/ui/CustomElements.css" rel="stylesheet">
+    <link href="src/Main.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet" data-noreload="true">
 
     <!-- https://github.com/jamesdiacono/Replete -->
