--- a/webl.html
+++ b/webl.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover">
-    <meta name="color-scheme" content="dark">
+    <meta name="color-scheme" content="dark light">
 
     <link href="src/Main.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet" data-noreload="true">
