--- a/debug.html
+++ b/debug.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover">
     <meta name="color-scheme" content="dark light">
+    <meta name="theme-color" content="#001" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#eee" media="(prefers-color-scheme: light)">
 
     <title>ChromaTracker</title>
 
