Build as single HTML file; close #116

--- a/single.html
+++ b/single.html
@@ -9,18 +9,10 @@
 
     <title>ChromaTracker</title>
 
-    <link href="manifest.json" rel="manifest">
     <link href="build/bundle.css" rel="stylesheet">
-    <link href="assets/Font.css" rel="stylesheet">
-    <link rel="shortcut icon" href="https://chroma.zone/favicon.ico">
-
-    <script src="src/Mustard.js"></script>
-    <script src="src/Debug.js" type="module"></script>
-    <script src="build/bundle.js" defer></script>
+    <link href="build/font.css" rel="stylesheet">
   </head>
   <body>
-    <noscript>
-      JavaScript must be enabled to use ChromaTracker
-    </noscript>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
