--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link href="manifest.json" rel="manifest">
     <link href="build/bundle.css" rel="stylesheet">
     <link href="assets/Font.css" rel="stylesheet">
-    <link rel="shortcut icon" href="https://chroma.zone/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/appicon16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/appicon32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="assets/appicon48.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/appicon192.png">
 
     <script src="src/Mustard.js"></script>
     <script src="src/Debug.js" type="module"></script>
